<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/cadastro_do_participante"
            android:textColor="@color/cinzaEscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/personal_info_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/section_card_background"
            android:elevation="4dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <TextView
                android:id="@+id/sectionDados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dados"
                android:textColor="@color/cinzaEscuro"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/personal_info_section" />

            <EditText
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/digite_seu_nome"
                android:inputType="textPersonName"
                android:textColor="@color/cinzaEscuro"
                android:textColorHint="@color/cinzaEscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sectionDados" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/digite_seu_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/cinzaEscuro"
                android:textColorHint="@color/cinzaEscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nome" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/digite_seu_telefone"
                android:inputType="phone"
                android:textColor="@color/cinzaEscuro"
                android:textColorHint="@color/cinzaEscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <Spinner
                android:id="@+id/tipo_participante"
                style="@style/SpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/tipo_de_participante"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone" />

            <Spinner
                android:id="@+id/tamanho_camisa"
                style="@style/SpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/tamanho_de_camisa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipo_participante" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/interesse_info_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/section_card_background"
            android:elevation="4dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/personal_info_section">

            <TextView
                android:id="@+id/AreaInteresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/areas_de_interesse"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal_info_section"
                tools:ignore="NotSibling" />

            <CheckBox
                android:id="@+id/curso1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/prototipa_o"
                app:layout_constraintEnd_toStartOf="@id/curso2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AreaInteresse"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="59dp" />

            <CheckBox
                android:id="@+id/curso2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/backend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/curso1"
                app:layout_constraintTop_toBottomOf="@id/AreaInteresse"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="59dp" />


            <CheckBox
                android:id="@+id/curso3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/inteligencia_artificial"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@id/curso1"
                app:layout_constraintTop_toBottomOf="@id/curso1" />

            <CheckBox
                android:id="@+id/curso4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/frontend"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toEndOf="@id/curso3"
                app:layout_constraintStart_toStartOf="@id/curso2"
                app:layout_constraintTop_toBottomOf="@id/curso2" />


            <TextView
                android:id="@+id/MotivoInscrição"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/motivo_da_inscri_o"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/curso4" />


            <CheckBox
                android:id="@+id/motivo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/minicursos"
                app:layout_constraintEnd_toStartOf="@id/motivo2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/MotivoInscrição"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="59dp" />


            <CheckBox
                android:id="@+id/motivo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:text="@string/palestras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/motivo1"
                app:layout_constraintTop_toBottomOf="@id/MotivoInscrição" />

            <CheckBox
                android:id="@+id/motivo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/possiveis_contatos"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@id/motivo1"
                app:layout_constraintTop_toBottomOf="@id/motivo1" />


            <CheckBox
                android:id="@+id/motivo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/competi_es"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toEndOf="@id/motivo3"
                app:layout_constraintStart_toStartOf="@id/motivo2"
                app:layout_constraintTop_toBottomOf="@id/motivo2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Switch
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/notific"
            app:layout_constraintStart_toStartOf="@id/interesse_info_section"
            app:layout_constraintTop_toBottomOf="@id/interesse_info_section"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/notific"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="29dp"
            android:text="@string/receber_notifica_o"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toEndOf="@id/notification" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/azulClaro"
            app:layout_constraintTop_toBottomOf="@id/notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="Enviar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>